<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CrearUsuarioActivity">

    <ImageView
        android:layout_width="225dp"
        android:layout_height="191dp"
        android:layout_gravity="center"
        android:src="@drawable/app202" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtEmail"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nuevoemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtClave">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nuevaclave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/crear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtBotonCrear"
        android:background="@color/colorPrimary"
        android:layout_gravity="center"

        />


</LinearLayout>